--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,20 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/wall2"
-    tools:context=".BeachListActivity">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/Category"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_marginStart="10dp"
-        android:text="Category"/>
+    android:background="@drawable/gradient"
+    android:layout_gravity="center"
+    tools:context=".details">
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/detailsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
@@ -26,5 +17,6 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="16dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
